<resources>
    <string name="app_name">Treff UNS</string>
    <string name="anmelden">anmelden</string>
    <string name="registrieren">Registrieren</string>
    <string name="email">Email</string>
    <string name="passwort">Passwort</string>
    <string name="Registrieren_message">Registrieren sie sich.</string>
    <string name="loggen_message">Melden sie sich an.</string>
    <string name="kein_konto_frage">haben sie kein Konto?</string>
    <string name="bereits_konto_frage">haben sie bereits ein Konto?</string>
    <string name="confirm_passwort">Passwort Bestätigen</string>
    <string name="home">Home</string>
    <string name="suche">Suche</string>
    <string name="neues">Neues</string>
    <string name="profil">Profil</string>
    <string name="treffenfinden">Treffens finden</string>
    <string name="erstellTreffen">Treffen erstellen</string>
    <string name="treffensehen">Meeting Sehen</string>
    <string name="treffenName">Treffen Name</string>
    <string name="treffen">Treffen</string>
    <string name="treffenNamegeben">Treffen Name eingeben</string>
    <string name="treffenKategorie">Kategorie (z.B. Lernen)</string>
    <string name="kategorieAuswahl">Kategorie auswählen</string>
    <string name="treffenTyp">Typ des Meetings</string>
    <string name="present">Presence</string>
    <string name="online">Online</string>
    <string name="treffpunkt">Treffpunkt</string>
    <string name="treffpunktieingabe">Treffpunkt eingeben</string>
    <string name="back_button_desc">Back button</string>
    <string name="settings_menu_desc">Settings menu</string>
    <string name="history_icon_desc">History icon</string>
    <string name="payment_icon_desc">Payment icon</string>
    <string name="help_icon_desc">Help icon</string>
    <string name="settings_icon_desc">Settings icon</string>
    <string name="arrow_forward_desc">Forward arrow</string>
</resources>