<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AnmeldenActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:onClick="registrieren"
                android:src="@drawable/baseline_arrow_back_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/registrieren"
                android:textColor="@color/my_primary"
                android:fontFamily="@font/dm_medium"
                android:textSize="24sp" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/dancing_bold"
            android:padding="5dp"
            android:text="@string/app_name"
            android:textColor="@color/my_primary"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:hint="@string/email"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/icon_color"
            android:textColorHint="@color/my_primary"
            app:hintTextColor="@color/my_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/my_primary"
                android:textColorHint="@color/my_primary" />

        </com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:hint="@string/passwort"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:passwordToggleEnabled="true"
        app:boxStrokeColor="@color/icon_color"
        android:textColorHint="@color/black"
        app:passwordToggleTint="@color/my_primary"
        app:hintTextColor="@color/my_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwort"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/icons8_lock"
            android:drawablePadding="8dp"
            android:inputType="textPassword"
            android:textColor="@color/my_primary"
            android:textColorHint="@color/my_primary" />

    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/einloggenBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/dm_medium"
            android:padding="20dp"
            android:text="@string/anmelden"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:backgroundTint="@color/my_primary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="4dp"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/kein_konto_frage"
                android:fontFamily="@font/dm_medium"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/Registrieren_message"
                android:fontFamily="@font/dm_medium"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:onClick="registrieren"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>